# gbtgridder

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  RunAllIntegrationTests  RunAllUnitTests  dev-requirements.txt  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: new_version.yaml  python-package.yml
docs/source/: boxcar.rst  gbtgridder_doc.rst  gbtgridder_ui.rst  get_data.rst  how_to_get_and_use.rst  index.rst  sparse.rst
src/: README  boxcar.py  counter.py  gbtgridder  gbtgridder.py  gbtgridder_args.py  gbtgridder_matrix  gbtgridder_matrix3_8.py  get_cube_info.py  get_cube_info_matrix3_8.py  get_data.py  get_data_matrix3_8.py  grid_otf.py  grid_otf_matrix3_8.py  make_header.py  make_header_matrix3_8.py  requirements.txt
src/gbtgridder/: __init__.py  boxcar.py  cov_otf.py  gbtgridder.py  gbtgridder_args.py  get_cube_info.py  get_data.py  grid_otf.py  make_header.py
src/gbtgridder/test/integration_tests/: cross_360_sdfits.fits  cygx_sdfits.fits  high_lat_sdfits.fits  normal.fits  test_cygx_cygrid.py  test_positions_files.py  test_standard.py
src/gbtgridder/test/unit_tests/: test_boxcar.py  test_parse_functions.py
src/gbtgridder/ui/: covMap_popup.ui  cov_popup.ui  gridder_interface.py  gridder_interface.ui  output_popup.ui
test/integration_tests/: cross_360_sdfits.fits  high_lat_sdfits.fits  normal.fits  test_cygx_cygrid.py  test_positions_files.py  test_standard.py
test/unit_tests/: test_convolve_function.py  test_format_scans.py
